WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197745
REGRESSION (
r241734
): 1% slower PLT on iPad
https://bugs.webkit.org/show_bug.cgi?id=197745
Summary
REGRESSION (r241734): 1% slower PLT on iPad
Daniel Bates
Reported
2019-05-09 11:15:57 PDT
When building with USE(UIKIT_KEYBOARD_ADDITIONS) enabled and following
r241734
we now always request a keyboard when WKContentView becomes first responder as we have one key event handling code path. As it turns out this is expensive enough the cause an ~1% slowdown in PLT on iPad.
Attachments
Patch
(3.22 KB, patch)
2019-05-09 11:42 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2019-05-09 11:28:36 PDT
Have a patch that regains the ~1% loss by lazily requesting keyboard instantiation immediately only if we have a hardware keyboard attached. Better fix is to be even lazier: only on first hardware keydown. We'll do this in another bug to spread out the risk and because we (Apple) wants this fix sooner. See
bug #197746
.
Daniel Bates
Comment 2
2019-05-09 11:41:35 PDT
<
rdar://problem/50457731
>
Daniel Bates
Comment 3
2019-05-09 11:42:24 PDT
Created
attachment 369503
[details]
Patch
Per Arne Vollan
Comment 4
2019-05-09 11:54:51 PDT
Comment on
attachment 369503
[details]
Patch Great work, Dan! R=me.
Daniel Bates
Comment 5
2019-05-09 11:58:48 PDT
Comment on
attachment 369503
[details]
Patch Clearing flags on attachment: 369503 Committed
r245148
: <
https://trac.webkit.org/changeset/245148
>
Daniel Bates
Comment 6
2019-05-09 11:58:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug